# gemma

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
include/logger/: logger.cpp  logger.h
src/: gemma.cpp  gemma.h  main.cpp
